--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -9,7 +9,13 @@
 
     <body>
 
-        BOOM
+        <a href="/">HOME</a>
+        <a href="/about">ABOUT</a>
+
+        <div class="section-container">
+
+        </div>
+
         <script src="./app.js"></script>
     </body>
 </html>
